fixed margin collapsing on estrenos.php

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -6,6 +6,11 @@ html, body {
 
 #contenedor {
     background-color: #f0f0f0;
+    margin: 0;
+    padding: 0;
+    height: 91%;
+    width: 100%;
+    overflow: hidden;
 }
 
 #Peliculas {
